--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,22 +1,31 @@
-# This workflow will build a Swift project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
-
 name: Swift
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - "**"
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - "**"
 
 jobs:
   build:
-
-    runs-on: macos-latest
+    strategy:
+      matrix:
+        os: [
+            macos-15,
+            # ubuntu-latest, # TODO: Enable this once Swift 6.0 is available on GitHub Actions. See https://github.com/swift-actions/setup-swift/issues/683
+          ]
+    runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+      - uses: actions/checkout@v4
+      - name: Install Swift
+        if: runner.os == 'Linux'
+        uses: swift-actions/setup-swift@v2
+        with:
+          swift-version: "6.0"
+      - name: Build
+        run: swift build
+      - name: Run tests
+        run: swift test
